# impulse-core

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: Makefile  app.py  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  rxconfig.py  tailwind.config.ts
app/components/: layout.tsx
app/database/: mdb.py
app/pages/api/auth/: callback.tsx
app/pages/auth/: login.tsx
app/pages/tests/: [name].tsx
app/tutorial/: tutorial.ipynb
app/utils/: mdb.py
impulse/: __init__.py
impulse_core/: __init__.py  __main__.py  logger.py  schema.py  tracer.py
python/impulse/: logger.py  tracer.py
sample/: mongodb.yml
tests/: test_logger.py  test_tracer.py
tutorial/: Makefile  example.ipynb  mongodb.yml  requirements.txt  tutorial.ipynb
tutorial/.locallogs/: tutorial_logs_2023-08-20_11:05:13.json
tutorial/.runlogs/: tutorial_logs.json
