[tool.poetry]
name = "impulse_core"
version = "0.1.6"
description = ""
authors = ["sudowoodo200 <sudowoodo200@gmail.com>"]
readme = "README.md"
repository = "https://github.com/sudowoodo200/impulse-core/"
exclude = ["app/*", "tests/*"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.5"
pymongo = "^4.3.3"
typing-extensions = "^4.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-mock = "*"
mypy = "^1.5.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.2"